  removed from the source. This is similar to --keepfiles except that files
  may still be reverted with the --nodelete option.
- Added --noprogress option that prevents progress messages from being 
  printed to the console, for cases where these messages pollute log files.
  This option is similar to --quiet, except the action report is printed.
- Added property setting to ignore missing source directories when uploading.
- Progress status messages shortened to fit into 80 character width consoles.


UPLOADER

- Improved skinning capabilities.


COCKPIT LITE

- New Gatekeeper-compatible client application that allows almost all S3 
  operations to be performed by a client via Gatekeeper-provided 
  signed URLs.
  
  
GATEKEEPER

- Extended interfaces and default implementations to provide URL signing
  for all operations performed by the new Cockpit Lite application.
- Improved support for web proxies.
  

TOOLKIT

  * General

- Added support for buckets located in the EU. Due to this change, the 
  "s3service.end-point-host" property is now obsolete.
- Added a default bucket location configuration setting in 
  jets3t.properties: "s3service.default-bucket-location". If you do not
  use an explicit bucket location when you use the bucket creation API
  method, the bucket will be created in this default location.
- Corrected the metadata name for the original date object metadata item, which
  was originally mis-typed as "jets3t-original-file-date-iso860". This name is
  now "jets3t-original-file-date-iso8601" (added "1" to the end). JetS3t
  tools remain compatible with the original metadata name.
- The FileComparer class used by JetS3t applications can now be configured to
  use pre-generated <filename>.md5 files as a source for MD5 hash values, 
  removing the need for hash values to be calculated for every synchronization 
  operation - and potentially saving a great deal of time when you are 